-------------------------------------------------------------------
Wed Mar 15 18:48:08 CET 2014 - anaselli@linux.it

- Implementation of optional widget YTimeField
- Implementation of optional widget YDateField
- new class NCInputText to share code between NCTimeField, NCDateField
  and NCInputField
- 2.46.5

-------------------------------------------------------------------
Tue Apr  8 12:42:03 CEST 2014 - gs@suse.de

- Display menu (function keys) correctly in non UTF-8 environment
  (bnc #865597)
- 2.46.4

-------------------------------------------------------------------
Fri Feb 28 12:35:39 CET 2014 - gs@suse.de

- fixed segfault in tree widget (bnc #866145)
- 2.46.3

-------------------------------------------------------------------
Wed Jan 29 15:08:55 CET 2014 - gs@suse.de

- code cleanup concerning text domain
- 2.46.2

-------------------------------------------------------------------
Sun Jan 19 11:41:07 CET 2014 - anaselli@linux.it

- NCInputField did not manage ctrl-h (08) and del (0x7f) to delete
  input
- Fixed YTree item selection during items population,
  old implementation ignored selected items.
- 2.46.1

-------------------------------------------------------------------
Thu Dec  5 16:36:33 UTC 2013 - mvidner@suse.com

- adjusted to libyui so version 6
- 2.46.0

-------------------------------------------------------------------
Wed Nov 20 12:55:34 CET 2013 - gs@suse.de

- Add 'Requires: glibc-locale' to spec-file (bnc #849255)
- Version 2.45.0

-------------------------------------------------------------------
Tue Aug  6 14:49:20 CEST 2013 - tgoettlicher@suse.de

- Fixed dependencies
- Version 2.44.1

-------------------------------------------------------------------
Tue Jun 18 15:40:41 CEST 2013 - gs@suse.de

- NCTable multi selection mode: deselect all items correctly, 
  return ValueChanged event on Return
- version 2.44.0
 
-------------------------------------------------------------------