@@ -1,6 +1,8 @@
 -------------------------------------------------------------------
-Wed Mar 15 18:48:08 CET 2014 - anaselli@linux.it
+Thu Apr 24 16:23:40 CEST 2014 - anaselli@linux.it
 
+- NCTimeField input validity check
+- NCDateField input validity check
 - Implementation of optional widget YTimeField
 - Implementation of optional widget YDateField
 - new class NCInputText to share code between NCTimeField, NCDateField
